Fix overlapping text on supplier declaration
Fixes: https://www.pivotaltracker.com/story/show/106191644

Brings in: https://github.com/alphagov/digitalmarketplace-frontend-toolkit/pull/197

Has some custom CSS to deal with the question headings on the declaration being
smaller than standard.

--- a/app/assets/scss/_supplier-declaration.scss
+++ b/app/assets/scss/_supplier-declaration.scss
@@ -25,7 +25,27 @@
    }
 
   .question-number {
-    @include bold-19;
+
+    @include core-19;
+    font-weight: bold;
+    display: inline-block;
+    height: 0.5em;
+
+    @include media(mobile) {
+      line-height: 1.25;
+      font-size: 19px;
+    }
+
+    @include media(tablet) {
+      line-height: 1.25;
+      font-size: 19px;
+    }
+
+    @include media(1080px) {
+      display: block;
+      height: 50px;
+    }
+
   }
 
   .validation-wrapper {
